Bug 1230970 - Allow line breaking in quotes. r=mkmelin

--HG--
extra : histedit_source : 9f375707dc7914996a9e430c462600ec1b89136f